--- a/AdmissionPortalCreator/AdmissionPortalCreator.csproj
+++ b/AdmissionPortalCreator/AdmissionPortalCreator.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\NewFolder1\" />
+    <Folder Include="Views\NewFolder\" />
+  </ItemGroup>
+
 </Project>
